Update to file made to be in line with RPG v1.3